Типы списков в интерфейсах HistoryManager и TaskManager приведены к List<>
Типы мап в TaskManager приведены к Map<>

Тип списка истории просмотров заменен на LinkedList

Добавлен вывод истории просмотров после 12 просмотров